// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button #active 1`] = `
<button
  className="toolbar-button toolbar-button--active"
  name={null}
  onMouseDown={[Function]}
  title={null}
  type="button"
/>
`;

exports[`Button #icon 1`] = `
<button
  className="toolbar-button"
  name={null}
  onMouseDown={[Function]}
  title={null}
  type="button"
>
  <Icon
    className=""
    name="icon-test"
    title={null}
  />
</button>
`;

exports[`Button #label 1`] = `
<button
  className="toolbar-button"
  name={null}
  onMouseDown={[Function]}
  title={null}
  type="button"
>
  Test label
</button>
`;

exports[`Button #name 1`] = `
<button
  className="toolbar-button"
  name="TEST"
  onMouseDown={[Function]}
  title={null}
  type="button"
/>
`;

exports[`Button empty 1`] = `
<button
  className="toolbar-button"
  name={null}
  onMouseDown={[Function]}
  title={null}
  type="button"
/>
`;
